# mesh_to_traversability_image

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
include/mesh_to_traversability_image/: mesh_to_traversability_image.hpp
launch/: mesh_to_freespace_grid_map_save.launch~  mesh_to_traversability_image.launch  mesh_to_traversability_image.launch~  mesh_to_traversability_map.launch~  pcd_to_traversability_image.launch  pcd_to_traversability_image.launch~  pcd_to_traversability_image_points.launch~  pcd_to_traversability_map.launch~  ply_to_traversability_image.launch  rosbag_freespace_gridmap.launch~
rviz/: load_pcd.rviz
src/: mesh_to_traversability_image_node.cpp
